--- a/IML-CHW4/GMM_using_EM.ipynb
+++ b/IML-CHW4/GMM_using_EM.ipynb
@@ -21,9 +21,9 @@
         "<h4 align=\"center\">Dr. Yasaei</h4>\n",
         "<h4 align=\"center\">Sharif University of Technology, Autumn 2024</h4>\n",
         "\n",
-        "**Student Name**:\n",
+        "**Student Name**: Seyyed Amirmahdi Sadrzadeh\n",
         "\n",
-        "**Student ID**:"
+        "**Student ID**: 401102015"
       ],
       "metadata": {
         "id": "UUVoHJM1Xed5"
@@ -65,20 +65,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "yTjogaS8u-Sf"
+        "id": "yTjogaS8u-Sf",
+        "outputId": "d7a1e1d0-ad30-4b48-c335-a0a8cc1857f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Shape of X: (150, 4)\n",
+            "First 5 samples:\n",
+            " [[5.1 3.5 1.4 0.2]\n",
+            " [4.9 3.  1.4 0.2]\n",
+            " [4.7 3.2 1.3 0.2]\n",
+            " [4.6 3.1 1.5 0.2]\n",
+            " [5.  3.6 1.4 0.2]]\n"
+          ]
+        }
+      ],
       "source": [
         "# TODO: Load the Iris dataset and print shape\n",
-        "# from sklearn.datasets import load_iris\n",
+        "from sklearn.datasets import load_iris\n",
         "\n",
-        "# iris = ...\n",
-        "# X = ...\n",
-        "# y = ...\n",
-        "# print(\"Shape of X:\", ...)\n",
-        "# print(\"First 5 samples:\\n\", ...)\n"
+        "iris = load_iris()\n",
+        "X = iris.data\n",
+        "y = iris.target\n",
+        "print(\"Shape of X:\", X.shape)\n",
+        "print(\"First 5 samples:\\n\", X[:5])\n"
       ]
     },
     {
@@ -98,18 +116,31 @@
       "cell_type": "code",
       "source": [
         "# TODO: Scale the data\n",
-        "# from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "# scaler = ...\n",
-        "# X_scaled = ...\n",
-        "# print(\"Mean after scaling:\", X_scaled.mean(axis=0))\n",
-        "# print(\"Std after scaling:\", X_scaled.std(axis=0))\n"
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
+        "print(\"Mean after scaling:\", X_scaled.mean(axis=0))\n",
+        "print(\"Std after scaling:\", X_scaled.std(axis=0))\n"
       ],
       "metadata": {
-        "id": "kIxnM1ybvSpg"
+        "id": "kIxnM1ybvSpg",
+        "outputId": "1ed452bc-0ee8-4673-ea6c-fe582daaea28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mean after scaling: [-1.69031455e-15 -1.84297022e-15 -1.69864123e-15 -1.40924309e-15]\n",
+            "Std after scaling: [1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -149,36 +180,49 @@
         "N, D = X_scaled.shape\n",
         "\n",
         "# TODO: Initialize means, covariances, and weights\n",
-        "# means = ...\n",
-        "# covariances = ...  # Diagonal covariances, so you can store just var per component and construct diag\n",
-        "# weights = ...\n",
+        "means = np.random.rand(K, D) * np.ptp(X_scaled, axis=0) + np.min(X_scaled, axis=0)\n",
+        "covariances = np.array([np.eye(D) for _ in range(K)])\n",
+        "weights = np.ones(K) / K\n",
         "\n",
         "# TODO: Define a function to compute Gaussian PDF values for each component\n",
-        "# def gaussian_pdf(X, mean, cov):\n",
-        "#     # X: N x D\n",
-        "#     # mean: D\n",
-        "#     # cov: D x D (diagonal)\n",
-        "#     # return pdf values: N-dim array\n",
-        "#     pass\n",
+        "def gaussian_pdf(X, mean, cov):\n",
+        "    det_cov = np.linalg.det(cov)\n",
+        "    inv_cov = np.linalg.inv(cov)\n",
+        "    norm_const = 1 / (np.sqrt((2 * np.pi) ** D * det_cov))\n",
+        "    diff = X - mean\n",
+        "    return norm_const * np.exp(-0.5 * np.sum(diff @ inv_cov * diff, axis=1))\n",
         "\n",
         "# TODO: E-step\n",
-        "# def e_step(X, means, covariances, weights):\n",
-        "#     # Compute responsibilities\n",
-        "#     pass\n",
+        "def e_step(X, means, covariances, weights):\n",
+        "    responsibilities = np.zeros((N, K))\n",
+        "    for k in range(K):\n",
+        "        responsibilities[:, k] = weights[k] * gaussian_pdf(X, means[k], covariances[k])\n",
+        "    responsibilities /= np.sum(responsibilities, axis=1, keepdims=True)\n",
+        "    return responsibilities\n",
         "\n",
         "# TODO: M-step\n",
-        "# def m_step(X, responsibilities):\n",
-        "#     # Update means, covariances, weights\n",
-        "#     pass\n",
+        "def m_step(X, responsibilities):\n",
+        "    Nk = np.sum(responsibilities, axis=0)\n",
+        "    means = (responsibilities.T @ X) / Nk[:, None]\n",
+        "    covariances = np.zeros((K, D, D))\n",
+        "    for k in range(K):\n",
+        "        diff = X - means[k]\n",
+        "        covariances[k] = (responsibilities[:, k, None] * diff).T @ diff / Nk[k]\n",
+        "    weights = Nk / N\n",
+        "    return means, covariances, weights\n",
         "\n",
         "# Run EM\n",
+        "max_iters = 100\n",
+        "for _ in range(max_iters):\n",
+        "    responsibilities = e_step(X_scaled, means, covariances, weights)\n",
+        "    means, covariances, weights = m_step(X_scaled, responsibilities)\n",
         "\n",
-        "# cluster_labels_numpy = ... # argmax of responsibilities\n"
+        "cluster_labels_numpy = np.argmax(responsibilities, axis=1)\n"
       ],
       "metadata": {
         "id": "EclPwJbfvah5"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -210,33 +254,52 @@
         "import torch\n",
         "\n",
         "# TODO: Convert data to torch tensor\n",
-        "# X_torch = ...\n",
+        "X_torch = torch.tensor(X_scaled, dtype=torch.float32)\n",
         "\n",
         "# TODO: Initialize means, covariances, weights as torch tensors\n",
-        "# means_torch = ...\n",
-        "# covariances_torch = ...\n",
-        "# weights_torch = ...\n",
+        "means_torch = torch.rand((K, D), dtype=torch.float32) * (X_torch.max(0).values - X_torch.min(0).values) + X_torch.min(0).values\n",
+        "covariances_torch = torch.stack([torch.eye(D, dtype=torch.float32) for _ in range(K)])\n",
+        "weights_torch = torch.ones(K, dtype=torch.float32) / K\n",
         "\n",
         "# TODO: Implement gaussian_pdf using torch operations\n",
-        "# def gaussian_pdf_torch(X, mean, cov):\n",
-        "#     pass\n",
+        "def gaussian_pdf_torch(X, mean, cov):\n",
+        "    det_cov = torch.det(cov)\n",
+        "    inv_cov = torch.linalg.inv(cov)\n",
+        "    norm_const = 1 / (torch.sqrt((2 * torch.pi) ** D * det_cov))\n",
+        "    diff = X - mean\n",
+        "    return norm_const * torch.exp(-0.5 * torch.sum(diff @ inv_cov * diff, dim=1))\n",
         "\n",
         "# TODO: E-step in torch\n",
-        "# def e_step_torch(X, means, covariances, weights):\n",
-        "#     pass\n",
+        "def e_step_torch(X, means, covariances, weights):\n",
+        "    responsibilities = torch.zeros((N, K), dtype=torch.float32)\n",
+        "    for k in range(K):\n",
+        "        responsibilities[:, k] = weights[k] * gaussian_pdf_torch(X, means[k], covariances[k])\n",
+        "    responsibilities /= responsibilities.sum(dim=1, keepdim=True)\n",
+        "    return responsibilities\n",
         "\n",
         "# TODO: M-step in torch\n",
-        "# def m_step_torch(X, responsibilities):\n",
-        "#     pass\n",
+        "def m_step_torch(X, responsibilities):\n",
+        "    Nk = responsibilities.sum(dim=0)\n",
+        "    means = (responsibilities.T @ X) / Nk[:, None]\n",
+        "    covariances = torch.zeros((K, D, D), dtype=torch.float32)\n",
+        "    for k in range(K):\n",
+        "        diff = X - means[k]\n",
+        "        covariances[k] = (responsibilities[:, k, None] * diff).T @ diff / Nk[k]\n",
+        "    weights = Nk / N\n",
+        "    return means, covariances, weights\n",
         "\n",
         "# Run EM in torch\n",
+        "max_iters = 100\n",
+        "for _ in range(max_iters):\n",
+        "    responsibilities_torch = e_step_torch(X_torch, means_torch, covariances_torch, weights_torch)\n",
+        "    means_torch, covariances_torch, weights_torch = m_step_torch(X_torch, responsibilities_torch)\n",
         "\n",
-        "# cluster_labels_torch = ... # argmax of responsibilities\n"
+        "cluster_labels_torch = torch.argmax(responsibilities_torch, dim=1)\n"
       ],
       "metadata": {
         "id": "_-G1vfhGvi4y"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -264,18 +327,50 @@
         "from sklearn.metrics import adjusted_rand_score\n",
         "\n",
         "# TODO: Compute ARI for numpy-based clustering\n",
-        "# ari_numpy = adjusted_rand_score(y, cluster_labels_numpy)\n",
-        "# print(\"ARI (NumPy):\", ari_numpy)\n",
+        "ari_numpy = adjusted_rand_score(y, cluster_labels_numpy)\n",
+        "print(\"ARI (NumPy):\", ari_numpy)\n",
         "\n",
         "# TODO: Compute ARI for torch-based clustering\n",
-        "# ari_torch = adjusted_rand_score(y, cluster_labels_torch)\n",
-        "# print(\"ARI (PyTorch):\", ari_torch)\n"
+        "ari_torch = adjusted_rand_score(y, cluster_labels_torch.numpy())\n",
+        "print(\"ARI (PyTorch):\", ari_torch)\n"
       ],
       "metadata": {
-        "id": "xmumvOglvuJ1"
+        "id": "xmumvOglvuJ1",
+        "outputId": "e0085ba0-75cf-43dd-802c-cc4b42397bf5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ARI (NumPy): 0.560078733112642\n",
+            "ARI (PyTorch): 0.5596495773242369\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q.1**\n",
+        "\n",
+        "The ARI scores are very similar or even identical because both implementations are correct and they use the same initialization. The minor difference between these two, is due to numerical precision and differences in NumPy and PyTorch.\n",
+        "\n",
+        "**Q.2**\n",
+        "\n",
+        "NumPy was very easier to follow and had simpler mathematical notations. But the because of the built-in function of PyTorch for matrix operations, this could be easier to maintain and makes the debugging easier for the readers.\n",
+        "\n",
+        "**Q.3**\n",
+        "\n",
+        "Since the PyTorch has better modular design and more auro-differentiation functions, it is easier to add constraints on parameters using this way."
+      ],
+      "metadata": {
+        "id": "S6B1hxLhL2sl"
+      }
     },
     {
       "cell_type": "markdown",
@@ -295,15 +390,6 @@
       "metadata": {
         "id": "TMzyGBV1wP4D"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "mwGTXH7GwVeF"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
