just secure RBM remains

--- a/Projects/Project_Phase_2.ipynb
+++ b/Projects/Project_Phase_2.ipynb
@@ -212,6 +212,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "The Boltzmann machine is like the one we used in the first phase of the project and follow the same patterns to update the parameters."
+      ],
+      "metadata": {
+        "id": "8rd8PBL8E2LE"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class RBM:\n",
@@ -288,6 +297,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Based on the simulations in phase 1 we define the number of hidden layers and k as follow:"
+      ],
+      "metadata": {
+        "id": "W14bINYQFBNq"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "n_visible = X_train_binary.shape[1]\n",
@@ -303,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Training the normal model:"
+        "Now we train the model on the MNIST dataset:"
       ],
       "metadata": {
         "id": "VMdo3cSGLbxG"
@@ -373,7 +391,18 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Evaluation for the normal model:"
+        "As you can see, the model is converging and the loss is getting lower to a fixed point.\n",
+        "\n",
+        "As we increase k, the final loss of the model on the training data is not getting better but based on the results of the first phase, we know that the model with a higher k performs better on the test datas and gives better resuls."
+      ],
+      "metadata": {
+        "id": "FuUFNaePFT_d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To test these models, we use the test dataset of the MNIST:"
       ],
       "metadata": {
         "id": "TUukKdxeLx7D"
@@ -382,8 +411,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# ارزیابی ماشین بولتزمن ساده\n",
-        "\n",
         "def evaluate_rbm(rbm, data):\n",
         "    loss = 0\n",
         "    for i in range(0, len(data), 64):\n",
@@ -404,20 +431,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nTs_QhhmL27i",
-        "outputId": "c6e21b5f-1f26-47f4-ab23-5c8bd8fc4c49"
+        "outputId": "95c904d1-30fe-4b64-a58c-86871f460c77"
       },
-      "execution_count": 19,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Simple RBM with k=1 Test Loss: 0.09028\n",
-            "Simple RBM with k=5 Test Loss: 0.08821\n",
-            "Simple RBM with k=10 Test Loss: 0.08768\n"
+            "Simple RBM with k=1 Test Loss: 0.08991\n",
+            "Simple RBM with k=5 Test Loss: 0.08803\n",
+            "Simple RBM with k=10 Test Loss: 0.08726\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The test loss is getting better by increasing k. This confirms the results discussed in the phase 1."
+      ],
+      "metadata": {
+        "id": "tuADL8LgGBVG"
+      }
     },
     {
       "cell_type": "markdown",
@@ -426,6 +462,17 @@
       ],
       "metadata": {
         "id": "lrbyHJ_mLsIR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "As we learned from the project file, the Secure Boltzmann Machine works with two parties. Each party have a specific number of parameters and each have they're own weights and biases.\n",
+        "\n",
+        "To update the parameters, we use ElGamal encryption so that both models can calculate loss with needed values (e.g. $v_1h_2$). To implement this, we approach like the model below:"
+      ],
+      "metadata": {
+        "id": "8IELhEF7GPEw"
       }
     },
     {
@@ -449,7 +496,6 @@
         "        self.mA = mA\n",
         "        self.mB = n_visible - mA\n",
         "        self.learning_rate = learning_rate\n",
-        "        # Initialize weights and biases with small random numbers.\n",
         "        self.W = np.random.normal(0, 0.1, (n_visible, n_hidden))\n",
         "        self.v_bias = np.zeros(n_visible)\n",
         "        self.h_bias = np.zeros(n_hidden)\n",
@@ -512,16 +558,16 @@
         "        - Binary samples for hidden layer (batch, n_hidden)\n",
         "        \"\"\"\n",
         "        # Split visible input: Party A's part and Party B's part.\n",
-        "        vA = v[:, :self.mA]   # Party A\n",
-        "        vB = v[:, self.mA:]   # Party B\n",
+        "        vA = v[:, :self.mA]\n",
+        "        vB = v[:, self.mA:]\n",
         "\n",
         "        # Split the weight matrix W accordingly.\n",
-        "        WA = self.W[:self.mA, :]   # shape (mA, n_hidden)\n",
-        "        WB = self.W[self.mA:, :]   # shape (mB, n_hidden)\n",
+        "        WA = self.W[:self.mA, :]\n",
+        "        WB = self.W[self.mA:, :]\n",
         "\n",
-        "        # Each party computes its partial activation.\n",
-        "        act_A = np.dot(vA, WA) + self.h_bias  # Party A adds its bias c (assumed shared)\n",
-        "        act_B = np.dot(vB, WB)                  # Party B computes its part (assumed no extra bias)\n",
+        "        # Each party computes its partial activation. we assume all the bias is on party A's side\n",
+        "        act_A = np.dot(vA, WA) + self.h_bias\n",
+        "        act_B = np.dot(vB, WB)\n",
         "\n",
         "        # Joint secure activation: each party encrypts its share, then they are combined.\n",
         "        # Here we simulate secure computation by simply summing the parts.\n",
@@ -546,13 +592,13 @@
         "        - Binary reconstruction of the visible layer (batch, n_visible)\n",
         "        \"\"\"\n",
         "        # For the visible layer, assume Party A owns the first mA visible units and Party B the rest.\n",
-        "        WA_T = self.W[:self.mA, :].T  # shape (n_hidden, mA)\n",
-        "        WB_T = self.W[self.mA:, :].T  # shape (n_hidden, mB)\n",
+        "        WA_T = self.W[:self.mA, :].T\n",
+        "        WB_T = self.W[self.mA:, :].T\n",
         "        bA = self.v_bias[:self.mA]\n",
         "        bB = self.v_bias[self.mA:]\n",
         "\n",
-        "        act_A = np.dot(h, WA_T) + bA  # Party A\n",
-        "        act_B = np.dot(h, WB_T) + bB  # Party B\n",
+        "        act_A = np.dot(h, WA_T) + bA\n",
+        "        act_B = np.dot(h, WB_T) + bB\n",
         "\n",
         "        # Combine secure activations\n",
         "        joint_act = np.concatenate([act_A, act_B], axis=1)\n",
@@ -571,8 +617,6 @@
         "    def contrastive_divergence_secure(self, v, k, public_key_a, private_key_a, public_key_b, private_key_b, random_r):\n",
         "        \"\"\"\n",
         "        Perform one step of secure Contrastive Divergence.\n",
-        "\n",
-        "        (Note: Here we simulate the secure operations with non-secure ones for gradient update.)\n",
         "        \"\"\"\n",
         "        # For simplicity, we perform ordinary Gibbs sampling.\n",
         "        # In a real implementation, secure operations would be applied at each step.\n",
@@ -641,6 +685,15 @@
       },
       "execution_count": 21,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**DDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDDD**"
+      ],
+      "metadata": {
+        "id": "brL4L2VlJmV2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1009,11 +1062,11 @@
         "rbm_joint.train(V_train, epochs=epochs, k=k, batch_size=batch_size)"
       ],
       "metadata": {
-        "id": "OnnABfnEZC_4",
-        "outputId": "ea184539-58e4-4ce7-b14a-0d4b8b3a5987",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OnnABfnEZC_4",
+        "outputId": "ea184539-58e4-4ce7-b14a-0d4b8b3a5987"
       },
       "execution_count": 53,
       "outputs": [
@@ -1063,12 +1116,12 @@
         "show_classification_results(X_test, Y_test, predictions_joint, n=10)"
       ],
       "metadata": {
-        "id": "3PXp7rKwY8zC",
-        "outputId": "82bd1dcb-beb6-4c2c-99d2-1f82a16b909d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "id": "3PXp7rKwY8zC",
+        "outputId": "82bd1dcb-beb6-4c2c-99d2-1f82a16b909d"
       },
       "execution_count": 54,
       "outputs": [
@@ -1232,13 +1285,13 @@
         "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {epoch_loss:.5f}\")"
       ],
       "metadata": {
-        "id": "dgnpYIsfq209",
-        "outputId": "cb71561f-5a41-45a2-edee-aad32215abe2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dgnpYIsfq209",
+        "outputId": "cb71561f-5a41-45a2-edee-aad32215abe2"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -1247,7 +1300,13 @@
             "Epoch 1/10, Loss: 0.23599\n",
             "Epoch 2/10, Loss: 0.10353\n",
             "Epoch 3/10, Loss: 0.07536\n",
-            "Epoch 4/10, Loss: 0.05815\n"
+            "Epoch 4/10, Loss: 0.05815\n",
+            "Epoch 5/10, Loss: 0.05386\n",
+            "Epoch 6/10, Loss: 0.04407\n",
+            "Epoch 7/10, Loss: 0.04030\n",
+            "Epoch 8/10, Loss: 0.03591\n",
+            "Epoch 9/10, Loss: 0.03353\n",
+            "Epoch 10/10, Loss: 0.03283\n"
           ]
         }
       ]
@@ -1285,52 +1344,22 @@
         "print(f\"Discriminative Model Accuracy: {accuracy*100:.2f}%\")"
       ],
       "metadata": {
-        "id": "Dv84TXVmqwZ5",
-        "outputId": "aaf73fdc-bfda-4bd6-c300-2e40ccf963f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dv84TXVmqwZ5",
+        "outputId": "529c198d-a095-4872-9bb7-17f76ced03dd"
       },
-      "execution_count": 49,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Classification Accuracy: 93.42%\n"
+            "Discriminative Model Accuracy: 96.55%\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Showing the results:"
-      ],
-      "metadata": {
-        "id": "BGuRsxNbs7gH"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# نمایش نتایج طبقه‌بندی (اختیاری)\n",
-        "def show_classification_results(x, true_labels, pred_labels, n=10):\n",
-        "    fig, axes = plt.subplots(1, n, figsize=(15, 3))\n",
-        "    for i, ax in enumerate(axes):\n",
-        "        ax.imshow(x[i].reshape(28,28), cmap='binary')\n",
-        "        ax.set_title(f\"True: {true_labels[i]}\\nPred: {pred_labels[i]}\")\n",
-        "        ax.axis('off')\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n",
-        "show_classification_results(X_test, Y_test, predictions, n=10)"
-      ],
-      "metadata": {
-        "id": "8AJnckuws-Iy"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
